--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <title>calculator</title>
 </head>
 <body>
+  <div>
+    <p id="input-1"></p>
+    <p id="input-2"></p>
+  </div>
+  
   <div class="numpad">
-    <button class="item">1</button>
-    <button class="item">2</button>
-    <button class="item">3</button>
-    <button class="item">4</button>
-    <button class="item">5</button>
-    <button class="item">6</button>
-    <button class="item">7</button>
-    <button class="item">8</button>
-    <button class="item">9</button>
-    <button class="item">0</button>
+    <button class="item" value= 1>1</button>
+    <button class="item" value= 2>2</button>
+    <button class="item" value= 3>3</button>
+    <button class="item" value= 4>4</button>
+    <button class="item" value= 5>5</button>
+    <button class="item" value= 6>6</button>
+    <button class="item" value= 7>7</button>
+    <button class="item" value= 8>8</button>
+    <button class="item" value= 9>9</button>
+    <button class="item" value= 0>0</button>
 
     <button class="operator equals">&equals;</button>
     <button class="operator plus">&plus;</button>
@@ -28,5 +32,6 @@
 
 
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
