--- a/this will be deleted/index.html
+++ b/this will be deleted/index.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./main.js" defer></script>
-    <title>OOP</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
+    <title>Document</title>
 </head>
 <body>
-    <h1>javacscrip OOP</h1>
+   <div class="slider">
+       <div class="first-slide slide current-slide">
+           <div class="content">
+               <h1>slide one</h1>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, hic!</p>
+               <button class="content-btn"></button>
+           </div>
+       </div>
+
+        <div class="second-slide slide">
+            <div class="content">
+                <h1>slide two</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, hic!</p>
+                <button class="content-btn"></button>
+            </div>
+        </div>
+
+        <div class="third-slide slide">
+            <div class="content">
+                <h1>slide three</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, hic!</p>
+                <button class="content-btn"></button>
+            </div>
+        </div>
+
+        <div class="tracker-buttons">
+            <button class="first-btn tracker-btn current-btn"></button>
+            <button class="second-btn tracker-btn"></button>
+            <button class="third-btn tracker-btn"></button>
+        </div>
+   </div>
 </body>
 </html>
