--- a/Websites/little fashion/index.html
+++ b/Websites/little fashion/index.html
@@ -40,23 +40,151 @@
         </ul>
        
     
-
-    <section class="hero">
+    <!-- carousel -->
+    <section>
         <div class="carousel">
-            <button class="carousel-btn num-one">&#8857;</button>
-            <button class="carousel-btn num-two">&#8857;</button>
-            <button class="carousel-btn num-three">&#8857;</button>
-            <ul class="img-slider">
-                <li><img src="./imgs/medium-shot-business-women-high-five.jpeg" alt="img #1"></li>
-                <li><img src="./imgs/team-meeting-renewable-energy-project.jpeg" alt="img #2"></li>
-                <li><img src="./imgs/two-business-partners-working-together-office-computer.jpeg" alt="img #3"></li>
-            </ul>
+                <div id="first-slide" class="slide current-slide">
+                    <div class="content">
+                        <h1>first slide</h1>
+                        <p>Little fashion template comes with total 8 HTML pages provided by Tooplate website.</p>
+                        <button class="content-btn">learn more about us</button>
+                    </div>
+                </div>
+                <div id="second-slide" class="slide">
+                    <div class="content">
+                        <h1>second slide</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur </p>
+                        <button class="content-btn">learn more about us</button>
+                    </div>
+                </div>
+                <div id="third-slide" class="slide">
+                    <div class="content">
+                        <h1>third slide</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <button class="content-btn">learn more</button>
+                    </div>
+                </div>
+                <div class="slide gradient"></div>
+            <div class="tracker-buttons">
+                <button id="first" class="tracker-btn current-btn"></button>
+                <button id="second" class="tracker-btn"></button>
+                <button id="third" class="tracker-btn"></button>
+            </div>
         </div>
     </section>
 
-    <section class="get-started"></section>
-    <section class="featured-products"></section>
-    <footer></footer>
+    <!-- get started -->
+    <section class="get-started">
+        <h1>Get started whit <span>Little</span> fashion</h1>
+        <div class="container">
+            <ul>
+                <li><a href="#">inroduction</a></li>
+                <li><a href="#">How we work?</a></li>
+                <li><a href="#">Capabilities</a></li>
+            </ul>
+            <img src="./imgs/pim-chu-z6NZ76_UTDI-unsplash.jpeg" alt="">
+            <div class="article">
+                <h2>Good <span>Design</span><br> ideas for <span>your</span> fashion</h2>
+                <p>Little Fashion templates comes with sign in / sign up pages, product listing / product detail, about, FAQs, and contact page.</p>
+                <p>Since this HTML template is based on Boostrap 5 CSS library, you can feel free to add more components as you need.</p>
+                <a href="#">learn more about us</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- retail shop -->
+    <section class="retail-shop">
+        <div class="container">
+            <img src="./imgs/retail-shop-owner-mask-social-distancing-shopping.jpg" alt="">
+            <div class="content">
+                <h2><span>Retail</span> shop owners</h2>
+                <p>Credits go to Unsplash and FreePik websites for images used in this Little Fashion by Tooplate.</p>
+                <a href="#">explore products</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- featured products -->
+    <section class="featured-products">
+        <div class="container">
+           <h1>Featured Products</h1>
+            <div class="product-box">
+                <div class="first product">
+                    <div class="card">
+                        <h6 class="tag">New Arrival</h6>
+                        <a href="#" class="heart-icon"></a>
+                    </div>
+                    <div class="info">
+                        <div class="name">
+                            <a href="#">Tree pot</a>
+                            <p>Original package design from house</p>
+                        </div>
+                        <p class="price">&dollar;25</p>
+                    </div>
+                </div>
+                <div class="second product">
+                 <div class="card">
+                     <h6 class="tag">Low Price</h6>
+                     <a href="#" class="heart-icon"></a>
+                 </div>
+                 <div class="info">
+                     <div class="name">
+                         <a href="#">Fashion Set</a>
+                         <p>costume package</p>
+                     </div>
+                     <p class="price">&dollar;35</p>
+                 </div>
+             </div>
+             <div class="third product">
+                 <div class="card">
+                     <!-- <h6 class="tag"></h6> -->
+                     <a href="#" class="heart-icon"></a>
+                 </div>
+                 <div class="info">
+                     <div class="name">
+                         <a href="#">Juice Drinks</a>
+                         <p>Nature made another world</p>
+                     </div>
+                     <p class="price">&dollar;45</p>
+                 </div>
+             </div> 
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer>
+        <div class="container">
+            <div class="little-fashion">
+                <h1><span>Little</span> Fashion</h1>
+                <p>Copyright © 2022 ShakibAghili</p>
+                <p>Designed by shakib</p>
+            </div>
+            <div class="sitemap">
+                <p>Sitemap</p>
+                <ul>
+                    <li><a href="#">Story</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">FAQs</a></li>
+                </ul>
+            </div>
+            <div class="social">
+                <p>Social</p>
+                <ul>
+                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-skype"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
    
 
