--- a/this will be deleted/index.html
+++ b/this will be deleted/index.html
@@ -4,41 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
     <title>Document</title>
+    <style>
+        *,*::after, *::before {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        body{
+            background-color: #333;
+            color: white;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        #btn{
+            margin-top: 1em;
+            /* position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translate(-50%); */
+            border: none;
+            outline: none;
+            padding: 2em 4em;
+            border-radius: 4em;
+            background-color: tomato;
+            color: white;
+            font-size: 1em;
+            text-transform: uppercase;
+            box-shadow: 6px 3px 12px red;
+            transition:box-shadow 200ms ease-in-out;
+            cursor: pointer;
+        }
+        #btn:hover{
+            box-shadow: 12px 6px 12px red;
+            transition:box-shadow 200ms ease-in-out;
+        }
+        .container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 1em;
+            gap: 1em;
+        }
+        img{
+            width: 150px;
+            height: 150px;
+        }
+        ul{
+            background-color: yellowgreen;
+            padding: 1em 2em;
+            min-width: 80vw;
+            list-style: none;
+            color: #333;
+            font-size: 1em;
+            font-weight: bold;
+            text-transform: capitalize;
+        }
+    </style>
 </head>
 <body>
-   <div class="slider">
-       <div class="first-slide slide current-slide">
-           <div class="content">
-               <h1>slide one</h1>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, hic!</p>
-               <button class="content-btn"></button>
-           </div>
-       </div>
-
-        <div class="second-slide slide">
-            <div class="content">
-                <h1>slide two</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, hic!</p>
-                <button class="content-btn"></button>
-            </div>
-        </div>
-
-        <div class="third-slide slide">
-            <div class="content">
-                <h1>slide three</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, hic!</p>
-                <button class="content-btn"></button>
-            </div>
-        </div>
-
-        <div class="tracker-buttons">
-            <button class="first-btn tracker-btn current-btn"></button>
-            <button class="second-btn tracker-btn"></button>
-            <button class="third-btn tracker-btn"></button>
-        </div>
-   </div>
+    <button id="btn">random users</button>
+    <div class="append"></div>
 </body>
+
+<script>
+    document.querySelector('#btn').addEventListener('click',addUser)
+
+function addUser() {
+    const xhr = new XMLHttpRequest()
+    xhr.open('GET', "users.json", true)
+    xhr.onload = function(){
+            var users = JSON.parse(this.responseText)
+        var randomUser = Math.round(Math.random()*30)
+        output = ""
+        output += `<div class="container">
+                        <img src="${users[randomUser].avatar_url}">
+                        <ul>
+                            <li>ID: ${users[randomUser].id}</li>
+                            <li>UserName: ${users[randomUser].login}</li>
+                            <li>UserType: ${users[randomUser].type}</li>
+                        </ul>
+                   </div>`
+                   document.querySelector('.append').innerHTML += output
+     }
+
+    xhr.send()
+}
+</script>
 </html>
